alignment fixes
(again)

--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,13 @@ h1 {
 }
 h2 {
     color: #fff;
-    font-size: 6em;
-    font-size: 8vw;
+    font-size: 3.3em;
+    /* font-size: 8vw; */
 }
 p {
     font-size: 4em;
     font-size: 5.7vw;
-    margin: 1em 0;
+    margin: .7em 0;
 }
 ul {
     list-style-type: none;
@@ -93,21 +93,16 @@ main,
         font-size: 15vw;
     }
     h2 {
-        font-size: 5.6em;
-        font-size: 7.5vw;
+        font-size: 5.5em;
+        /* font-size: 7.5vw; */
     }
     p {
         font-size: 2.3em;
         font-size: 3.15vw;
     }
     ul {
-        width: 67vw;
-    }
-    ul:first-child {
-        text-align: left;
-    }
-    ul:last-child {
-        text-align: right;
+        width: 70%;
+        margin: auto;
     }
     li {
         float: left;
